--- a/views/reset.jade
+++ b/views/reset.jade
@@ -3,6 +3,8 @@ html(lang='en')
     head
         title= title
         link(rel='stylesheet', href='/stylesheets/style.css')
+        style
+            include style.css
     body
         form(method='POST')
             legend Reset Password
