--- a/views/home.jade
+++ b/views/home.jade
@@ -7,9 +7,9 @@ html
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js')
     style.
       body {
-      background-color:black;
+      background-color: #00B2BF;
       }
-      .home{
+      .home {
       margin-top: 400px;
       }
       h1 {
@@ -22,5 +22,5 @@ html
     .home
       center
         .logo
-          img(src='https://amadeus-server.herokuapp.com/api/normal/image/amadeus-1588938070828-Amadeus.0438ffec.png', alt='amadeus-logo', width='700px', height='600px')
-        h1 Amadeus Shop
+          img(src='https://mellullaby.herokuapp.com/api/normal/image/amadeus-1589026468500-genealogy-logo.png', alt='amadeus-logo', width='500px', height='500px')
+        h1 Genealogy
