--- a/views/home.jade
+++ b/views/home.jade
@@ -3,24 +3,23 @@ html
   head
     title Amadeus
     meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js')
     style.
       body {
       background-color: #00B2BF;
       }
       .home {
-      margin-top: 400px;
+      margin-top: 10%;
       }
       h1 {
       padding: 20px;
       color: white;
-      font-size: 100px;
+      font-size: 200%;
       font-family: cursive;
       }
   body
     .home
       center
-        .logo
-          img(src='https://mellullaby.herokuapp.com/api/normal/image/amadeus-1589026468500-genealogy-logo.png', alt='amadeus-logo', width='500px', height='500px')
+        img(src='https://mellullaby.herokuapp.com/api/normal/image/amadeus-1589026468500-genealogy-logo.png', alt='amadeus-logo', style='width:25%;')
         h1 Genealogy
